# claude-md-toggler

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
presets/: CLAUDE.md.quality-first  CLAUDE.md.speed-first  CLAUDE.md.token-save  CLAUDE.md.unlimited
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  file_watcher.rs  lib.rs  main.rs  seeding.rs  tray.rs
src-tauri/src/core/: drift.rs  history.rs  mappings.rs  memory.rs  mod.rs  profile_store.rs  session_lock.rs  toggle_engine.rs
src/components/: ConflictDialog.tsx  HistoryViewer.tsx  MappingsView.tsx  MemoryView.tsx  ProfileEditor.tsx
