[package]
name = "claude-md-toggler"
version = "0.1.0"
edition = "2021"
description = "Menu bar app to toggle Claude Code harness profiles"
license = "MIT"
repository = "https://github.com/1989v/claude-md-toggler"

[lib]
name = "claude_md_toggler_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"
similar = "2"
notify = "8"
notify-debouncer-full = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
